# BouncingPlus

./: .gitignore  Bullet.cpp  Bullet.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityType.h  Game.cpp  Game.h  LevelLoader.cpp  Menu.cpp  Menu.h  ParticleManager.cpp  ParticleManager.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  README.md  SoundManager.cpp  SoundManager.h  Spawner.cpp  Spawner.h  TileManager.cpp  TileManager.h  TileType.h  UI.cpp  UI.h  UIManager.cpp  UIManager.h  UpgradeStation.cpp  UpgradeStation.h  (+19 more)
Web/: main.data  main.js
assets/: explain_stuff_for_levels.txt  explain_stuff_for_weapons.txt  level_4.csv
assets/maps/: LevelOrder.txt  cpp_level.csv  level_1.csv  untitled.csv
assets/maps/Aarush's Level/: map_data.csv  metadata.json
assets/maps/Bossy Instincts/: map_data.csv  metadata.json
assets/maps/Bouncing Fun/: map_data.csv  metadata.json
assets/maps/Bullet Hell/: metadata.json
assets/maps/DEBUG/: map_data.csv  metadata.json
assets/maps/Deja Vu/: map_data.csv  metadata.json
assets/maps/Difficulty++/: map_data.csv  metadata.json
assets/maps/Not Easy/: map_data.csv  metadata.json
assets/maps/Openfield/: metadata.json
assets/maps/STUPID base/: map_data.csv  metadata.json
assets/maps/Testing Map/: map_data.csv
assets/maps/The Base/: metadata.json
assets/maps/The Boss/: metadata.json
assets/maps/The First One/: map_data.csv  metadata.json
assets/maps/The Robots/: map_data.csv  metadata.json
assets/maps/Tutorial/: map_data.csv  metadata.json
assets/maps/Waves/: map_data.csv  metadata.json
assets/maps/cpp_level/: metadata.json
assets/maps/debug/: map_data.csv  metadata.json
assets/old/: old_bullet
assets/shaders/: blur.glsl  bounce_distort.glsl  dash_arrow.glsl  forcefield.glsl  outline.glsl  pixelizer.glsl  weps_outline.glsl
assets/weapondata/: Charger.json  Default Gun.json  Enemy Shotgun.json  Enemy Sword.json  Player Gun.json  Shotgun.json  Sniper.json  Spear.json  Supercharged Shotgun.json  Sword.json  Virtue Sword.json  explain_stuff
build-web/: index.js  index.wasm
entities/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityType.h  Powerups.cpp  Powerups.h  Weapons.cpp  Weapons.h
entities/bosses/: FaceBoss.cpp  FaceBoss.h
entities/subentities/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h  PlayerLogicProcessor.cpp  PlayerLogicProcessor.h  Spawner.cpp  Spawner.h  Throwable.cpp  Throwable.h  Turret.cpp  Turret.h  UpgradeStation.cpp  UpgradeStation.h
entities/subentities/behaviors/: BehaviorType.h  CatchBehavior.cpp  CatchBehavior.h  EnemyBehavior.cpp  EnemyBehavior.h  WeaponBehavior.cpp  WeaponBehavior.h
game/: Game.cpp  Game.h  Menu.cpp  Menu.h  Profiler.cpp  Profiler.h
game/core/: Achievements.cpp  Controls.cpp  Controls.h  Profiler.cpp  Saves.cpp  Saves.h  SharedManager.cpp  SharedManager.h
game/managers/: CameraManager.cpp  CameraManager.h  EntityManager.cpp  EntityManager.h  GameModeManager.cpp  GameModeManager.h  ParticleManager.cpp  ParticleManager.h  ResourceManager.cpp  ResourceManager.h  SoundManager.cpp  SoundManager.h  UIManager.cpp  UIManager.h
game/network/: Server.cpp  Server.h
game/saves/: Achievements.cpp  Achievements.h  Saves.cpp  Saves.h  Settings.cpp  Settings.h
game/ui/: Menu.cpp  Menu.h  Tutorial.cpp  Tutorial.h  UIManager.cpp  UIManager.h  UIUtils.cpp  UIUtils.h
level/: LevelLoader.cpp  LevelLoader.h  TileManager.cpp  TileManager.h  TileType.h
pyscripts/: create_exe.py  create_web.py  grab.py  map_maker.py  my_cool_level.csv  ohio.csv  web_compile.bat  yes.csv
pyscripts/.EXE/assets/maps/Deja Vu/: metadata.json
pyscripts/BouncingPlusVersion119/assets/: explain_stuff_for_weapons.txt
pyscripts/BouncingPlusVersion119/assets/maps/Bouncing Fun/: map_data.csv  metadata.json
pyscripts/BouncingPlusVersion119/assets/maps/Difficulty++/: map_data.csv  metadata.json
pyscripts/BouncingPlusVersion119/assets/maps/The First One/: metadata.json
pyscripts/BouncingPlusVersion119/assets/weapondata/: Supercharged Shotgun.json
pyscripts/BouncingPlusVersion293/assets/: explain_stuff_for_weapons.txt
pyscripts/BouncingPlusVersion293/assets/maps/Bouncing Fun/: map_data.csv
pyscripts/BouncingPlusVersion293/assets/shaders/: outline.glsl  pixelizer.glsl
pyscripts/BouncingPlusVersion293/assets/weapondata/: Default Gun.json  Supercharged Shotgun.json
pyscripts/BouncingPlusVersion7/assets/maps/: LevelOrder.txt
pyscripts/BouncingPlusVersion7/assets/maps/The Boss/: map_data.csv
pyscripts/BouncingPlusVersion7/assets/maps/Tutorial/: metadata.json
pyscripts/BouncingPlusVersion7/assets/maps/Waves/: metadata.json
pyscripts/BouncingPlusVersion7/assets/shaders/: dash_arrow.glsl
pyscripts/BouncingPlusVersion7/assets/weapondata/: Enemy Shotgun.json  Virtue Sword.json
tiled/: HARD.tmj  HARD_LVLV.tmx  lesbian_boykisser.txt  untitled.tmj
tiled/tileset/: bouncingplus_tileset.tsx
